--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,9 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+# Add SQL module here
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -20,7 +21,8 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(Inventorymanagmentsystem
+
+qt_add_executable(Inventorymanagmentsystem
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         admin_page.h admin_page.cpp admin_page.ui
@@ -29,20 +31,14 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         backend_classes.cpp
         settingspage.h settingspage.cpp settingspage.ui
         checkout_page.h checkout_page.cpp checkout_page.ui
-
-
+        database_manager.h
+        database_manager.cpp
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET Inventorymanagmentsystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
         add_library(Inventorymanagmentsystem SHARED
             ${PROJECT_SOURCES}
         )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
         add_executable(Inventorymanagmentsystem
             ${PROJECT_SOURCES}
@@ -50,14 +46,17 @@ else()
     endif()
 endif()
 
-target_link_libraries(Inventorymanagmentsystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+# Add SQL linking here
+target_link_libraries(Inventorymanagmentsystem PRIVATE
+    Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::Sql
+)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
+# Bundle settings
 if(${QT_VERSION} VERSION_LESS 6.1.0)
   set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.Inventorymanagmentsystem)
 endif()
+
 set_target_properties(Inventorymanagmentsystem PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
